[package]
name = "rivets-factorio-mod"
version = "0.0.0"
edition = "2021"

[dependencies]
rivets = { git = "https://github.com/factorio-rivets/rivets-crate" }
anyhow = "1.0"
pdb = "0.8"
windows = { version = "0.58", features = [
    "Win32",
    "Win32_System",
    "Win32_System_LibraryLoader",
] }
abi_stable = "0.11"
dll-syringe = { version = "0.15", features = ["full"] }
mod_util = { git = "https://github.com/fgardt/factorio-scanner" }

[lib]
crate-type = ["dylib"]
path = "src/lib.rs"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "allow"
trivial_regex = "allow"
