[package]
name = "rivets-factorio-mod"
version = "0.0.0"
edition = "2021"

[dependencies]
rivets = { git = "https://github.com/factorio-rivets/rivets-rs" }
anyhow = "1.0.86"
ctor = "0.2.8"
pdb = "0.8.0"
windows = { version = "0.58", features = [
    "Win32",
    "Win32_System",
    "Win32_System_LibraryLoader",
] }

[lib]
crate-type = ["dylib"]
path = "src/lib.rs"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "allow"
trivial_regex = "allow"
