[package]
name = "rivets-factorio-mod"
version = "0.0.0"
edition = "2021"

[dependencies]
rivets = { git = "https://github.com/factorio-rivets/rivets-rs" }
anyhow = "1.0"
dll-syringe = { version = "0.15", features = ["full"] }
mod_util = { git = "https://github.com/fgardt/factorio-scanner" }
libloading = "0.8"

[lib]
crate-type = ["dylib"]
path = "src/lib.rs"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "allow"
trivial_regex = "allow"